...
            VerifiableTextField(
                isValid = state.isEmailValid,
                label = state.emailLabel,
                isError = state.isErrorEmail,
                text = state.emailAddress,
                onValueChange = { email -> viewModel.onEvent(LoginEvent.OnEmailUpdated(email)) },
                modifier = Modifier.testTag("email_text_field")
            )
            Spacer(modifier = Modifier.height(16.dp))
            PasswordTextField(
                label = state.passwordLabel,
                isError = state.isErrorPassword,
                text = state.password,
                onValueChange = {
                        password -> viewModel.onEvent(LoginEvent.OnPasswordUpdated(password))
                },
                modifier = Modifier.testTag("password_text_field")
            )
            Spacer(modifier = Modifier.height(25.dp))
            LoadingTextButton(
                textRes = R.string.log_in,
                isLoading = state.isLoading,
                onClick = { viewModel.onEvent(LoginEvent.LogIn) },
...
