...
            snackbarHost = {
                SnackbarHost(hostState = LocalSnackbarHostState.current) { data ->
                    Snackbar(
                        backgroundColor = Color.Red,
                        snackbarData = data,
                        contentColor = Color.White,
                        modifier = Modifier.testTag("snackbar")
                    )
                }
            },
        ) { paddingValues ->
            RootNavigation(
                navController = navController,
...
