...
    BaseAgendaScreen(
        headerContent = {
            Row(
                modifier = Modifier
                    .align(Alignment.CenterStart)
                    .clickable { dialogState.show() }
                    .testTag("agenda_header"),
                verticalAlignment = Alignment.CenterVertically,

                ) {
                Text(
                    text = state.monthLabel.uppercase(),
                    style = MaterialTheme.typography.h3,
...
